Changed checkbox to button

--- a/insurerSide/insurerIndex.html
+++ b/insurerSide/insurerIndex.html
@@ -263,7 +263,9 @@
                                                 <h6 class="mb-0"><strong>New on-board Client referral</strong></h6><span class="text-xs">10:30 AM</span>
                                             </div>
                                             <div class="col-auto">
-                                                <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="formCheck-1"><label class="custom-control-label" for="formCheck-1"></label></div>
+                                              <button class="btn btn-outline-primary">
+                                                <input class="custom-control-input" type="button">Action
+                                              </button>
                                             </div>
                                         </div>
                                     </li>
@@ -273,7 +275,9 @@
                                                 <h6 class="mb-0"><strong>*Reminder* CW-Manage Policy review</strong></h6><span class="text-xs">11:30 AM</span>
                                             </div>
                                             <div class="col-auto">
-                                                <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="formCheck-2"><label class="custom-control-label" for="formCheck-2"></label></div>
+                                              <button class="btn btn-outline-primary">
+                                                <input class="custom-control-input" type="button">Action
+                                              </button>
                                             </div>
                                         </div>
                                     </li>
@@ -283,7 +287,9 @@
                                                 <h6 class="mb-0"><strong>Alien Abduction Claim with Fletchod Jarretsen</strong></h6><span class="text-xs">N/A AM:PM</span>
                                             </div>
                                             <div class="col-auto">
-                                                <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="formCheck-3"><label class="custom-control-label" for="formCheck-3"></label></div>
+                                              <button class="btn btn-outline-primary">
+                                                <input class="custom-control-input" type="button">Action
+                                              </button>
                                             </div>
                                         </div>
                                     </li>
