--- a/insurerSide/referrals.html
+++ b/insurerSide/referrals.html
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item"><a class="nav-link" href="insurerindex.html"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="profile.html"><i class="fas fa-user"></i><span>Profile</span></a></li>
-                    <li class="nav-item"><a class="nav-link active" href="Referrals.html"><i class="fas fa-table"></i><span>Referrals</span></a></li>
+                    <li class="nav-item"><a class="nav-link active" href="referrals.html"><i class="fas fa-table"></i><span>Referrals</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
                 </ul>
